--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -16,6 +16,8 @@
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
+  display: flex;
+  flex-direction: column;
 }
 
 .description a {
@@ -226,5 +228,55 @@
   }
   to {
     transform: rotate(0deg);
+  }
+}
+
+.contactForm {
+  display: flex;
+  flex-direction: column;
+  label {
+    margin-bottom: 5px;
+    margin-top: 5px;
+  }
+  textarea {
+    background-color: #eaeaea;
+    border-width: 0px;
+    height: 50px;
+    width: 30vw;
+    border-radius: 4px;
+    padding: 0px 0px 0px 10px;
+    color: #000;
+  }
+  button {
+    margin: 20px 0px 15px 0px;
+    height: 25px;
+    background-color: #555;
+    border-radius: 4px;
+    border: 0px;
+    -webkit-transition: background-color 0.3s; /* For Safari 3.0 to 6.0 */
+    transition: background-color 0.3s; /* For modern browsers */
+  }
+  button:hover {
+    background-color: orange;
+    cursor: pointer;
+  }
+}
+
+.loader {
+  border: 8px solid #f3f3f3; /* Light grey */
+  border-top: 8px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+  color: white;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
