--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -31,8 +31,8 @@
   position: relative;
   margin: 0;
   padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
+  // background-color: rgba(var(--callout-rgb), 0.5);
+  // border: 1px solid rgba(var(--callout-border-rgb), 0.3);
   border-radius: var(--border-radius);
 }
 
@@ -244,6 +244,7 @@
   height: 60px;
   animation: spin 2s linear infinite;
   color: white;
+  margin-bottom: 10px;
 }
 
 @keyframes spin {
@@ -253,4 +254,23 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+.response {
+  width: 80%;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #444;
+  border-radius: 20px;
+}
+.responseContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.responseColumn {
+  align-items: center;
+  justify-content: center;
+  width: 50%;
 }
